# napalm_vrp

./: .gitignore  README.rst  pyproject.toml
napalm_vrp/: vrp.py
napalm_vrp/utils/textfsm_templates/: display_lldp_neighbor.tpl
