[tool.poetry]
name = "napalm_vrp"
version = "0.1.2"
description = ""
authors = ["jcPOLO <jcpologonzalez@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
napalm = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
